WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33782
REGRESSION (
r52449
): SVG mask wrongly clipped when not at origin for recent nightly build
https://bugs.webkit.org/show_bug.cgi?id=33782
Summary
REGRESSION (r52449): SVG mask wrongly clipped when not at origin for recent n...
Oliver Hunt
Reported
2010-01-17 19:50:35 PST
REGRESSION (
r52449
): SVG mask wrongly clipped when not at origin for recent nightly build
Attachments
Patch
(6.41 KB, patch)
2010-01-17 19:55 PST
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Patch
(14.63 KB, patch)
2010-04-18 16:31 PDT
,
Dirk Pranke
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-01-17 19:55:40 PST
Created
attachment 46783
[details]
Patch
Oliver Hunt
Comment 2
2010-01-17 19:57:10 PST
<
rdar://7545298
>
Oliver Hunt
Comment 3
2010-01-17 20:00:05 PST
Committed
r53388
: <
http://trac.webkit.org/changeset/53388
>
Dirk Pranke
Comment 4
2010-04-18 16:31:51 PDT
Created
attachment 53642
[details]
Patch
Nikolas Zimmermann
Comment 5
2010-04-22 09:45:18 PDT
Something is wrong here, Dirk did you upload to the wrong bug report?
Dirk Schulze
Comment 6
2010-05-05 08:26:02 PDT
Comment on
attachment 53642
[details]
Patch Seems that you upload this patch to the wrong bug. Clearing the review flag.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug