2010-01-17  Oliver Hunt  <oliver@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION (r52449): SVG mask wrongly clipped when not at origin for recent nightly build
        https://bugs.webkit.org/show_bug.cgi?id=33782

        Testcase for a mask containing transformed elements

        * platform/mac/svg/custom/transformedMaskFails-expected.png: Added.
        * svg/custom/transformedMaskFails-expected.txt: Added.
        * svg/custom/transformedMaskFails.svg: Added.
2010-01-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Dan Bernstein.

        REGRESSION (r52449): SVG mask wrongly clipped when not at origin for recent nightly build
        https://bugs.webkit.org/show_bug.cgi?id=33782

        Test: svg/custom/transformedMaskFails.svg

        When computing the bounds for elements in a mask, we iterate through
        all of our children requesting their repaint bounds using
        repaintRectInLocalCoordinates(), but we were not converting that
        rect into our own coordinate system, thus leading to an incorrect
        repaint rect.  This patch simply adds the missing localToParent
        transform.

        * svg/SVGMaskElement.cpp:
        (WebCore::SVGMaskElement::drawMaskerContent):

Canonical link: https://commits.webkit.org/44789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53388 268f45cc-cd09-0410-ab3c-d52691b4dbfc