WebCore/svg/SVGMaskElement.cpp
@@ -169,7 +169,7 @@ PassOwnPtr<ImageBuffer> SVGMaskElement::drawMaskerContent(const RenderObject* ob
             continue;
 
         rendererList.append(node->renderer());
-        repaintRect.unite(node->renderer()->repaintRectInLocalCoordinates());
+        repaintRect.unite(node->renderer()->localToParentTransform().mapRect(node->renderer()->repaintRectInLocalCoordinates()));
     }
 
     TransformationMatrix contextTransform;
